Findbugs fixes
svn path=/trunk/; revision=46744


Former-commit-id: cc308dc7effe10ec82ad40b235c9fb09d82dc4c7